# Fraud-Signal-Lakehouse

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  skeleton.py  tasks.ps1
.github/workflows/: cd.yml  ci.yml
configs/: config.yaml
dags/: fraud_lakehouse_dag.py
dashboard/: app.py
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/marts/: fact_transaction.sql  schema.yml
dbt/models/staging/: sources.yml  stg_transactions.sql
dbt/tests/: assert_scd2_no_overlap.sql
docs/: architecture.md  data_contract.md  runbook.md  setup_windows.md
infra/terraform/: backend.tf  emr_serverless.tf  iam.tf  lakeformation.tf  main.tf  monitoring.tf  msk.tf  outputs.tf  variables.tf
scripts/: local_up.sh
src/fraud_lakehouse/: __init__.py
src/fraud_lakehouse/agent/: __init__.py  analyst.py  retriever.py
src/fraud_lakehouse/common/: __init__.py  alerts.py  config.py  exceptions.py  logger.py  metrics.py
src/fraud_lakehouse/ingestion/: __init__.py  batch_ingest.py  elliptic_loader.py
src/fraud_lakehouse/ml/: __init__.py  features.py  score.py  train.py
src/fraud_lakehouse/quality/: __init__.py  gx_runner.py
tests/: conftest.py
tests/e2e/: README.md  smoke_test.py
tests/integration/: test_stream_kafka.py
tests/unit/: test_agent.py  test_batch_ingest.py  test_config.py  test_elliptic_loader.py  test_exceptions.py  test_gx_runner.py  test_logger.py  test_metrics_alerts.py  test_ml.py  test_producer.py  test_scd2.py  test_silver_transform.py  test_stream_job.py
(+9 files in other folders)
